// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`comments.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
// https://github.com/prettier/prettier/issues/18307
class C {
  /** @type {string | undefined} */
  s

  typeCastS() {
    /** @type {string} */ (this.s).length
  }
}

// https://github.com/prettier/prettier/issues/12794
;(/** @type {(token: Token)=>void} */ (onToken))(token) // comment
;/** @type {(token: Token)=>void} */ (onToken)(token) // comment

// unparenthesized
;/** @type {(token: Token)=>void} */ [onToken](token) // comment
;/** @type {(token: Token)=>void} */ onToken(token) // comment

;/* not a type cast comment */ ([])(token) // comment

;/* don't need leading semicolon */ (foo)(token) // comment

=====================================output=====================================
// https://github.com/prettier/prettier/issues/18307
class C {
  /** @type {string | undefined} */
  s

  typeCastS() {
    ;/** @type {string} */ (this.s).length
  }
}

// https://github.com/prettier/prettier/issues/12794
;/** @type {(token: Token)=>void} */ (onToken)(token) // comment
;/** @type {(token: Token)=>void} */ (onToken)(token) // comment

// unparenthesized
;/** @type {(token: Token)=>void} */ [onToken](token) // comment
/** @type {(token: Token)=>void} */ onToken(token) // comment

/* not a type cast comment */ ;[](token) // comment

/* don't need leading semicolon */ foo(token) // comment

================================================================================
`;

exports[`multiline.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
/**
@type {{
  bar: string[]
}}
*/ (foo).bar.forEach(doStuff)

=====================================output=====================================
;/**
@type {{
  bar: string[]
}}
*/ (foo).bar.forEach(doStuff)

================================================================================
`;

exports[`type-cast-issue.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
// https://github.com/prettier/prettier/issues/18307
class C {
  /** @type {string | undefined} */
  s

  typeCastS() {
    /** @type {string} */ (this.s).length
  }
}

// https://github.com/prettier/prettier/issues/12794
;(/** @type {(token: Token)=>void} */ (onToken))(token)
;/** @type {(token: Token)=>void} */ (onToken)(token)

// unparenthesized
;/** @type {(token: Token)=>void} */ [onToken](token)
;/** @type {(token: Token)=>void} */ onToken(token)

;/* not a type cast comment */ ([])(token)

;/* don't need leading semicolon */ (foo)(token)

=====================================output=====================================
// https://github.com/prettier/prettier/issues/18307
class C {
  /** @type {string | undefined} */
  s

  typeCastS() {
    ;/** @type {string} */ (this.s).length
  }
}

// https://github.com/prettier/prettier/issues/12794
;/** @type {(token: Token)=>void} */ (onToken)(token)
;/** @type {(token: Token)=>void} */ (onToken)(token)

// unparenthesized
;/** @type {(token: Token)=>void} */ [onToken](token)
/** @type {(token: Token)=>void} */ onToken(token)

/* not a type cast comment */ ;[](token)

/* don't need leading semicolon */ foo(token)

================================================================================
`;
